welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:0: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:5: error: not found: value levebrosse
	baisseBrosse();leveBrosse();droite();avance();gauche();avance();baisseBrosse();levebrosse();avance()
                                                                                       ^